# SC2Scan

./: .gitignore  README.md  battleidfinder regex.txt  bot.py  config.yml  pyproject.toml
modules/: config.py  factoids.py  parse_facts.py  search_player.py  traverse.py
